--- a/Ionic3Blank/src/pages/home/home.html
+++ b/Ionic3Blank/src/pages/home/home.html
@@ -1,11 +1,28 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Curso
+      Ionic curso 
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <button ion-button (click)="goAbout()"> GO About</button>
+<ion-content style="background-color: #ece5dd;" padding #content>
+  <div style="display: flex; flex-direction: column;">
+    <div 
+    class="wrapper-message"
+    *ngFor="let item of messages"
+    [ngClass]="{'your-messages':item.idUser === user.id_user}">
+      <label class="name" > {{ item.name | titlecase}} </label>
+      <p class="message"> {{ item.message }} </p>
+    </div>
+  </div>
 </ion-content>
+
+<ion-footer>
+    <ion-item>
+      <ion-textarea type="text" [(ngModel)]="message"></ion-textarea>
+      <button ion-button item-right (click)='sendMessage()' style=" height: 80%;">
+          Enviar
+      </button>
+    </ion-item>
+</ion-footer>
